# sandbox-ui

./: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  README.md
.cargo/: config.toml
backend/: Cargo.toml  build.rs
backend/src/: analyzer.rs  config.rs  db.rs  main.rs
backend/src/entities/: analysis.rs  mod.rs  prelude.rs  sample.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  config.ts  main.ts  utils.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: AnalysisGraph.vue  AnalysisNotFound.vue  AnalyzeForm.vue  MetadataTr.vue  NavBar.vue  SandboxListbox.vue  ToolTip.vue
frontend/src/components/icons/: IconGithub.vue  IconKunai.vue  IconSwagger.vue
frontend/src/router/: index.ts
frontend/src/views/: AboutView.vue  AnalysisListView.vue  AnalysisNotFoundView.vue  AnalysisView.vue  AnalyzeAgainView.vue  HomeView.vue  NotFoundView.vue  PageView.vue  SwaggerUIView.vue
migration/: Cargo.toml  schema.sqlite
migration/src/: lib.rs  m20220101_000001_create_samples_table.rs  m20250325_145201_create_analysis_table.rs
